Chrome clang plugin: skip more uninteresting parts of the AST.

Previously, the plugin would check each TagDecl to see if it was in a
SourceLocation that should be skipped. While this works, it means the
RecursiveASTVisitor ends up descending into many 'uninteresting' parts
of the AST. It also meant that the logic of skipping checks in banned
locations needed to be individually by each RecursiveASTVisitor
callback.

The primary observation here is that if a declaration is in a banned
location, there (should) be no need to visit any of its child nodes. By
doing this, the plugin can skip traversing through namepspace std, etc.

This does assume that declarations don't span banned and non-banned
source locations, but that would require extreme abuse of the
preprocessor, and hopefully doesn't happen...

Bug: 711764
Change-Id: Iecba8a85cae85d15f19d89d965485f7aae7f200f